--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,7 @@ body {
 
 header {
   margin-bottom: 24px;
+  position: relative;
 
   h1 {
     font-weight: 900;
@@ -27,6 +28,14 @@ header {
   p {
     font-size: 14px;
     color: #444;
+  }
+
+  time {
+    position: absolute;
+    color: #999;
+    font-size: 10px;
+    bottom: 4px;
+    right: 4px;
   }
 }
 
@@ -73,6 +82,7 @@ header {
         line-height: 1.2;
         font-weight: bold;
         color: #5784b1;
+        white-space: nowrap;
       }
     }
   }
@@ -134,12 +144,34 @@ header {
 .curriculum {
   margin-bottom: 24px;
   padding: 8px 12px;
-  background: #fcfcfc;
+  background: #f9f9f9;
 
   h1 {
     font-weight: 900;
+    font-size: 16px;
+    color: #333;
+  }
+
+  h2 {
+    margin: 20px 0 4px;
+    padding-top: 6px;
+    font-weight: 900;
     font-size: 14px;
-    color: #999;
+    color: #666;
+    display: flex;
+  }
+
+  &__link {
+    margin-left: 8px;
+    font-weight: 900;
+    font-size: 14px;
+    color: #5784b1;
+    display: flex;
+    align-items: center;
+
+    i {
+      font-size: 16px;
+    }
   }
 
   li {
@@ -158,6 +190,44 @@ header {
       border-radius: 50%;
     }
   }
+}
+
+
+.work {
+  margin-bottom: 24px;
+  padding: 8px 12px;
+  background: #f9f9f9;
+
+  h1 {
+    font-weight: 900;
+    font-size: 16px;
+    color: #333;
+  }
+
+  h2 {
+    margin: 20px 0 4px;
+    padding-top: 6px;
+    font-weight: 900;
+    font-size: 14px;
+    color: #666;
+    display: flex;
+  }
+
+  p{
+    margin-top: 8px;
+    font-size: 13px;
+    color: #333;
+    line-height: 1.3;
+  }
+
+  &__link{
+    color: #5784b1;
+    font-weight: 900;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+  }
+
 }
 
 footer {
