--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,7 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   line-height: 1.5;
   color: #212529;
   -webkit-text-size-adjust: 100%;
@@ -138,7 +140,6 @@ header {
       }
     }
   }
-
 }
 
 .curriculum {
@@ -146,28 +147,36 @@ header {
   padding: 8px 12px;
   background: #f9f9f9;
 
+  section {
+    margin: 40px;
+  }
+
   h1 {
     font-weight: 900;
-    font-size: 16px;
-    color: #333;
+    font-size: 14px;
+    color: #444;
   }
 
   h2 {
-    margin: 20px 0 4px;
+    margin: 12px 0 4px;
     padding-top: 6px;
-    font-weight: 900;
-    font-size: 14px;
-    color: #666;
+    font-weight: 600;
+    font-size: 12px;
+    color: #888;
     display: flex;
   }
 
   &__link {
     margin-left: 8px;
-    font-weight: 900;
+    font-weight: 400;
     font-size: 14px;
     color: #5784b1;
     display: flex;
     align-items: center;
+
+    &:hover {
+      font-weight: 600;
+    }
 
     i {
       font-size: 16px;
@@ -176,7 +185,7 @@ header {
 
   li {
     font-size: 14px;
-    margin-top: 4px;
+    margin-top: 12px;
     display: flex;
     align-items: center;
 
@@ -191,7 +200,6 @@ header {
     }
   }
 }
-
 
 .work {
   margin-bottom: 24px;
@@ -213,25 +221,25 @@ header {
     display: flex;
   }
 
-  p{
+  p {
     margin-top: 8px;
     font-size: 13px;
     color: #333;
     line-height: 1.3;
   }
 
-  &__link{
+  &__link {
     color: #5784b1;
     font-weight: 900;
     font-size: 14px;
     display: flex;
     align-items: center;
   }
-
 }
 
 footer {
   border-top: 1px solid #eee;
+  margin-top: 40px;
 
   small {
     margin-top: 12px;
